# Termiplay

./: .clang-format  .gitignore  CMakeLists.txt  CMakePresets.json  README.md  config.yaml  vcpkg.json
include/: miniaudio.h  tl_app.h  tl_audio.h  tl_errors.h  tl_pch.h  tl_proc.h  tl_test.h  tl_types.h  tl_utils.h  tl_video.h  tpl_app.h  tpl_audio.h  tpl_errors.h  tpl_ffmpeg_utils.h  tpl_input.h  tpl_main.h  tpl_path.h  tpl_player.h  tpl_proc.h  tpl_setup.h  tpl_string.h  tpl_tests.h  tpl_types.h  tpl_utils.h  tpl_vector.h  tpl_video.h
src/: app.c  audio.c  main.c  player.c  proc.c  setup.c  utils.c  video.c
tests/: main_test.c  test.c
